@@ -1,4 +1,10 @@
 2008-11-06: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/DNS.pm (query): changed API so that it now returns
+   a list of Net::DNS::RR objects, rather than a Net::DNS::Packet object.
+ * lib/Mail/DKIM/Policy.pm: update for the change to the DNS.pm api.
+ * lib/Mail/DKIM/PublicKey.pm: update for the change to the DNS.pm api.
+
+2008-11-06: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Signature.pm (encode_qp, decode_qp): suppress a warning
    about an uninitialized value
  * lib/Mail/DKIM/Common.pm (message_originator, message_sender): if a
